Eureka Client dependencies

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -32,3 +32,6 @@ logging:
     org.hibernate: INFO
 server:
   port: ${SERVER_PORT:8090}
+eureka:
+  instance:
+    instance-id: ${spring.application.name}:${random.uuid}
